# political-advisor

./: .gitignore  app.py  ds.py  langgraph.json  main.py  package-lock.json  package.json  pyproject.toml  server.py
agents/: article_extraction_agent.py  knowledge_graph_uploader_agent.py  reviewer_agent.py  router_agent.py  scraper_selection_agent.py  scraping_agent.py  url_generation_agent.py
agents/tests/: test_url_generation_agent.py  test_workflow.py
archive/: agent.py
archive/prompts/: __init__.py  article_extraction_prompts.py  template_prompt.py
archive/templates/: error.html
archive/utils/: __init__.py  config.py  custom_logging.py  nodes.py  state.py
config/: config.py
frontend/: package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: ConfigDisplay.js  JobQueue.js  LogConsole.js  SearchInterface.js  Sidebar.js
frontend/src/contexts/: ConfigContext.js
models/: state.py
prompts/: article_extraction_prompt.py  review_prompt.py  search_agent_selection_prompt.py  search_term_generation_prompt.py
templates/: index.html
tests/: test_article_extraction_agent.py  test_google_cse.py  test_workflow.py  tests.ipynb
tools/: database.py
tools/scraping/: jina_scraper.py  web_base_loader_scraper.py
tools/searching/: google_cse.py  tavily_search.py
